--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -5,12 +5,13 @@
     padding-left: 1rem;
     margin-top: 0;
     padding: 1rem;
+    margin-left: 1.5rem;
     li {
       color: white;
       display: inline;
       margin: 1rem;
       transition: all 0.3s ease;
-      &:hover{
+      &:hover {
         color: #f9ff00;
       }
       button {
