--- a/components/movieCard/movie-card.module.scss
+++ b/components/movieCard/movie-card.module.scss
@@ -4,6 +4,7 @@
   text-align: center;
   height: 100%;
   img {
+    width: 13rem;
     object-fit: cover;
     border-radius: 8px 8px 0 0;
     cursor: pointer;
@@ -25,14 +26,14 @@
     text-overflow: ellipsis;
     text-align: justify;
     text-justify: inter-word;
-    align-self: flex-end;
     margin-bottom: 0;
     margin-top: auto;
     font-size: 0.9rem;
+    line-height: 1.1rem;
   }
   .rate {
     text-align: left;
-    margin: 1rem 0 1.2rem 0;
+    margin: 0.6rem 0 0.8rem 0;
     font-weight: bold;
     font-size: 0.9rem;
   }
