--- a/components/movieCard/movie-card.module.scss
+++ b/components/movieCard/movie-card.module.scss
@@ -4,7 +4,7 @@
   text-align: center;
   height: 100%;
   img {
-    width: 13rem;
+    width: 12rem;
     object-fit: cover;
     border-radius: 8px 8px 0 0;
     cursor: pointer;
@@ -14,6 +14,7 @@
     margin-top: 0.7rem;
     margin-bottom: 0.5rem;
     font-weight: bold;
+    font-size: 0.95rem;
   }
   a {
     text-overflow: ellipsis;
