some bugs fixed

--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -16,7 +16,7 @@
     li {
       margin: 0.3rem;
       margin-bottom: 2rem;
-      flex: 0 0 17%;
+      flex: 0 0 12rem;
       border: #8080802e solid 0.06rem;
       border-radius: 0.5rem;
     }
