--- a/components/movieCard/movie-card.module.scss
+++ b/components/movieCard/movie-card.module.scss
@@ -11,8 +11,8 @@
   }
   .title {
     cursor: pointer;
-    margin-top: 0.7rem;
-    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.4rem;
     font-weight: bold;
     font-size: 0.95rem;
   }
@@ -34,12 +34,12 @@
   }
   .rate {
     text-align: left;
-    margin: 0.6rem 0 0.8rem 0;
+    margin: 0.5rem 0 0.6rem 0;
     font-weight: bold;
     font-size: 0.9rem;
   }
-  li.detail {
-    padding: 0 0.8rem;
+  .detail {
+    padding: 0 0.6rem;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -51,7 +51,7 @@
     padding: 0.6rem;
     border-radius: 0 0 0.3rem 0.3rem;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 0.9rem;
     cursor: pointer;
   }
 }
