--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -24,7 +24,8 @@
         cursor: pointer;
         font-size: 1rem;
         border: none;
-        background: #f9ff00;
+        background: #00aeff;
+        color: white;
         border-radius: 0.43rem;
         width: 5rem;
         height: 2rem;
