--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -1,16 +1,11 @@
 .navbar {
   background-color: black;
-  font-weight: bold;
-  font-size: 1.1rem;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   ul {
-    margin: 0;
-    margin-left: 1rem;
     display: flex;
     list-style-type: none;
+    padding-left: 1rem;
+    margin-top: 0;
+    margin-left: 1.5rem;
     li {
       color: white;
       display: flex;
@@ -18,23 +13,21 @@
       margin: 1rem;
       transition: all 0.3s ease;
       &:hover {
-        color: #00d0ff;
+        color: #f9ff00;
       }
       button {
         cursor: pointer;
         font-size: 1rem;
         border: none;
-        background: #00aeff;
-        color: white;
+        background: #f9ff00;
         border-radius: 0.43rem;
         width: 5rem;
         height: 2rem;
-        font-weight: bold;
       }
     }
     .user {
       margin-left: auto;
-      margin-right: 5rem;
+      margin-right: 1.5rem;
       span {
         margin-right: 1rem;
       }
