--- a/pages/home/home.module.scss
+++ b/pages/home/home.module.scss
@@ -1,22 +1,17 @@
 .home {
   h1 {
     text-align: center;
-    margin: 0.8rem;
-    font-size: 1.6rem;
   }
-
   ul {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-left: 0;
-    margin-top: 0.8rem;
-
     li {
       margin: 0.3rem;
       margin-bottom: 2rem;
-      flex: 0 0 12rem;
+      flex: 0 0 17%;
       border: #8080802e solid 0.06rem;
       border-radius: 0.5rem;
     }
