--- a/pages/watchlist/watchlist.module.scss
+++ b/pages/watchlist/watchlist.module.scss
@@ -1,10 +1,9 @@
-.home {
+.watchlist-page {
   h1 {
     text-align: center;
     margin: 0.8rem;
     font-size: 1.6rem;
   }
-
   ul {
     list-style-type: none;
     display: flex;
@@ -12,13 +11,12 @@
     justify-content: center;
     padding-left: 0;
     margin-top: 0.8rem;
-
     li {
-      margin: 0.3rem;
+      margin: 5px;
       margin-bottom: 2rem;
       flex: 0 0 12rem;
-      border: #8080802e solid 0.06rem;
-      border-radius: 0.5rem;
+      border: #8080802e solid 1px;
+      border-radius: 8px;
     }
   }
 }
